fix issue in extracting file name in some special cases